force-app/main/default/objects/Rental__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <formula>Item__r.Author__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Author</label>
    <type>Text</type>
</CustomField>