force-app/main/default/objects/Rental__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Borrower</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Rentals</relationshipLabel>
    <relationshipName>Rentals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>