force-app/main/default/objects/Rental__c/fields/Name_Surname__c.field-meta.xml
<CustomField>
    <fullName>Name_Surname__c</fullName>
    <formula>Borrower__r.Name__c &amp; &quot; &quot;&amp;  Borrower__r.Surname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Surname</label>
    <type>Text</type>
</CustomField>