force-app/main/default/objects/Rental__c/fields/Overdue_Payment__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Payment__c</fullName>
    <formula>Weekdays_From_Due__c * CASE( Item__r.RecordType.Name, &quot;Book&quot;, $CustomMetadata.Overdue_Price__mdt.Book.Amount__c , &quot;Audiobook&quot;, $CustomMetadata.Overdue_Price__mdt.Audiobook.Amount__c , &quot;Magazine&quot;, $CustomMetadata.Overdue_Price__mdt.Magazine.Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>