force-app/main/default/objects/Rental__c/fields/Publishing_House__c.field-meta.xml
<CustomField>
    <fullName>Publishing_House__c</fullName>
    <formula>Item__r.Publishing_House__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publishing House</label>
    <type>Text</type>
</CustomField>