force-app/main/default/objects/Rental__c/fields/Release_Year__c.field-meta.xml
<CustomField>
    <fullName>Release_Year__c</fullName>
    <formula>Item__r.Release_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>