force-app/main/default/objects/Rental__c/fields/Rental_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Rental Date</label>
    <type>Date</type>
</CustomField>