force-app/main/default/objects/Rental__c/fields/Returning_Date__c.field-meta.xml
<CustomField>
    <fullName>Returning_Date__c</fullName>
    <description>Date when an item should be returned to the library.</description>
    <label>Returning Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>