force-app/main/default/objects/Rental__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>reserved</fullName>
                <default>true</default>
                <label>reserved</label>
            </value>
            <value>
                <fullName>borrowed</fullName>
            </value>
            <value>
                <fullName>returned</fullName>
            </value>
            <value>
                <fullName>delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>