force-app/main/default/objects/Rental__c/fields/Weekdays_From_Due__c.field-meta.xml
<CustomField>
    <fullName>Weekdays_From_Due__c</fullName>
    <description>calculates number of weekdays since the due date</description>
    <formula>IF(ISPICKVAL(Status__c, &quot;delayed&quot;),
(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Returning_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(  Returning_Date__c  - DATE( 1900, 1, 8), 7 ) ) ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekdays From Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>