force-app/main/default/objects/Rental__c/validationRules/returning_date_after_today.validationRule-meta.xml
<ValidationRule>
    <fullName>returning_date_after_today</fullName>
    <active>true</active>
    <errorConditionFormula>Returning_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorMessage>Rental can not be in the past</errorMessage>
</ValidationRule>